--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "type": "module",
   "license": "MIT",
   "keywords": [ "chrome-extension" ],
-  "engines": {
-    "node": ">=14.18.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,13 +13,16 @@
     "fmt": "prettier --write '**/*.{tsx,ts,json,css,scss,md}'"
   },
   "dependencies": {
-    "preact": "^10.8.2"
+    "preact": "^10.11.2"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^1.0.12",
-    "@preact/preset-vite": "^2.3.0",
+    "@crxjs/vite-plugin": "^1.0.14",
+    "@preact/preset-vite": "^2.4.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
+    "typescript": "~4.8.4",
     "vite": "^2.9.13"
+  },
+  "engines": {
+    "node": ">=14.18.0"
   }
 }
